# Calendar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  event_service.Dockerfile  gateway.Dockerfile  identity_service.Dockerfile  invite_service.Dockerfile  mypy.ini  notification_service.Dockerfile  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: build_event_service.yaml  build_gateway.yaml  build_identity_service.yaml  build_invite_service.yaml  lint.yml  (+1 more)
event_service/: .dockerignore  Dockerfile  README.md  constants.py  main.py  pyproject.toml
event_service/db/: postgres_client.py
event_service/errors/: ai_response_error.py
event_service/prisma/: schema.prisma
event_service/proto/: event_service.proto
event_service/repository/: event_repository.py  event_repository_impl.py  event_repository_interface.py  mock_event_repository.py
event_service/src/: event_service_impl.py  main.py
event_service/src/constants/: __init__.py  constants.py
event_service/src/models/: __init__.py  event.py
event_service/src/repository/: __init__.py  event_repository_impl.py  event_repository_interface.py  mock_event_repository.py
event_service/src/utilities/: __init__.py  ai_client.py  custom_interceptor.py
event_service/utilities/: ai_client.py  custom_interceptor.py
event_service/utils/: ai_client.py  custom_interceptor.py  singleton.py
gateway/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
gateway/app/: main.py
gateway/app/constants/: __init__.py
gateway/app/errors/: __init__.py  rate_limit_error.py  unauthenticated_error.py  unauthorized.py
gateway/app/grpc_client/: __init__.py  grpc_client.py
gateway/app/middleware/: __init__.py  auth.py  interceptor.py  rate_limiter.py
gateway/app/models/: Interval.py  __init__.py  event.py  invite.py  notification.py  user.py
gateway/app/params/: __init__.py  grpc_client_params.py
gateway/app/routers/: __init__.py  events.py  invites.py  notification.py  notifications.py  users.py
gateway/app/utils/: __init__.py  event_permission_checker.py  event_start_to_notification_start_converter.py  user_existence_checker.py
gateway/app/validators/: __init__.py  int_validators.py  str_validators.py
identity_service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
identity_service/db/: db.py  postgres_client.py  redis_client.py
identity_service/errors/: InvalidTokenError.py  unique_error.py  value_not_found_error.py
identity_service/prisma/: schema.prisma
identity_service/proto/: auth.proto  delete_user.proto  get_access_token.proto  get_user.proto  identity_service.proto  update_user.proto
identity_service/repository/: mock_token_repository.py  mock_user_repository.py  token_repository.py  token_repository_impl.py  token_repository_interface.py  user_repository.py  user_repository_impl.py  user_repository_interface.py
identity_service/src/: identity_service_impl.py  main.py
identity_service/src/models/: __init__.py  user.py
identity_service/src/repository/: __init__.py  mock_token_repository.py  mock_user_repository.py  token_repository_impl.py  user_repository_impl.py  user_repository_interface.py
identity_service/src/utilities/: __init__.py  custom_interceptor.py  encoder.py  jwt_controller.py
identity_service/utilities/: custom_interceptor.py  jwt_controller.py
identity_service/utils/: custom_interceptor.py  encoder.py  jwt_controller.py  singleton.py
invite_service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
invite_service/db/: postgres_client.py
invite_service/errors/: permission_denied.py
invite_service/interceptor/: custom_interceptor.py
invite_service/prisma/: schema.prisma
invite_service/proto/: invite_service.proto
invite_service/repository/: invite_perository_impl.py  invite_repository_impl.py  invite_repository_interface.py  mock_invite_repository.py
invite_service/src/: invite_service_impl.py  main.py
invite_service/src/interceptor/: __init__.py  custom_interceptor.py
invite_service/src/models/: __init__.py  invite.py
invite_service/src/repository/: __init__.py  invite_repository_impl.py  invite_repository_interface.py  mock_invite_repository.py
invite_service/utils/: custom_interceptor.py
notification_service/: .dockerignore  Dockerfile  README.md  constants.py  main.py  pyproject.toml
notification_service/db/: postgres_client.py
notification_service/errors/: value_not_found_error.py
notification_service/interceptor/: custom_interceptor.py
notification_service/prisma/: schema.prisma
notification_service/repository/: mock_notification_repository.py  notification_repository_impl.py  notification_repository_interface.py
notification_service/src/: main.py  notification_service_impl.py
notification_service/src/constants/: __init__.py  constants.py
notification_service/src/interceptor/: custom_interceptor.py
notification_service/src/models/: __init__.py  notification.py
notification_service/src/repository/: __init__.py  mock_notification_repository.py  notification_repository_impl.py
notification_service/utils/: custom_interceptor.py
shared/: __init__.py  pyproject.toml
shared/components/: __init__.py
shared/components/db/: postgres_client.py
shared/components/errors/: __init__.py
shared/components/utils/: __init__.py
shared/db_package/: __init__.py  pyproject.toml
shared/db_package/db/: __init__.py  postgres_client.py
shared/errors_package/: __init__.py  pyproject.toml
shared/errors_package/errors/: __init__.py  wrong_interval_error.py
shared/proto/event_service/: event_service.proto
shared/proto/identity_service/: auth.proto  delete_user.proto  get_access_token.proto  get_user.proto  identity_service.proto  update_user.proto
shared/proto/interval/: interval.proto
shared/proto/invite_service/: invite_service.proto
shared/proto/notification_service/: notification_service.proto
shared/proto/user/: user.proto
shared/utils_package/: __init__.py  pyproject.toml
(+14 files in other folders)
