[tool.poetry]
name ="gateway"
version = "0.1.0"
description = ""
authors = [
    "Nhsdkk <38581029+Nhsdkk@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
2to3 = "^1.0"
types-protobuf = "^4.24.0.20240311"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
flake8-docstrings = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
