[tool.poetry]
name ="gateway"
version = "0.1.0"
description = ""
authors = [
    "Nhsdkk <38581029+Nhsdkk@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.7.0"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
types-protobuf = "^4.24.0.20240311"
protoletariat = "^3.2.19"
pytz = "^2024.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
flake8-docstrings = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
