[tool.poetry]
name = "identity_service"
version = "0.1.0"
description = ""
authors = ["Nhsdkk <38581029+Nhsdkk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
prisma = "^0.13.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
protobuf = "4.25.3"
types-protobuf = "^4.24.0.20240311"
grpc-interceptor = "^0.15.4"
protoletariat = "^3.2.19"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
flake8-docstrings = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
