[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Nhsdkk <nikittsev.anton@gmail.com>"]
packages = [{include = "components"}]

[tool.poetry.dependencies]
python = "^3.11"
prisma = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
